relationtoSQL/RelationToSQLParser.java
// Generated from C:\Users\Calton\Documents\Antlr Projects\RelationToSQL\RelationToSQL.g4 by ANTLR 4.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class RelationToSQLParser extends Parser {
	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		WS=1, PAI=2, IDENT=3, LEFT=4, RIGHT=5, XIGEMA=6, EQUAL=7, NUM=8, AND=9, 
		DOU=10, OR=11, LESS=12, MORE=13, NEQUAL=14, BING=15, JIAO=16, NJOIN=17, 
		CHU=18, SEMI=19;
	public static final String[] tokenNames = {
		"<INVALID>", "WS", "'H'", "IDENT", "'('", "')'", "'G'", "'='", "NUM", 
		"'@'", "','", "'^'", "'<'", "'>'", "'!='", "'*'", "'~'", "'&'", "'/'", 
		"';'"
	};
	public static final int
		RULE_prog = 0, RULE_projectStart = 1, RULE_project = 2, RULE_choose = 3, 
		RULE_projectColumns = 4, RULE_chooseColumns = 5, RULE_loopProjectColumns = 6, 
		RULE_relation = 7, RULE_bin = 8, RULE_jia = 9, RULE_njo = 10, RULE_chu = 11, 
		RULE_exprSub = 12, RULE_loopChooseColumns = 13, RULE_chooseColumnsAfterAndOr = 14, 
		RULE_projectSub = 15, RULE_chooseSub = 16, RULE_equal = 17, RULE_notEqual = 18, 
		RULE_small = 19, RULE_big = 20;
	public static final String[] ruleNames = {
		"prog", "projectStart", "project", "choose", "projectColumns", "chooseColumns", 
		"loopProjectColumns", "relation", "bin", "jia", "njo", "chu", "exprSub", 
		"loopChooseColumns", "chooseColumnsAfterAndOr", "projectSub", "chooseSub", 
		"equal", "notEqual", "small", "big"
	};

	@Override
	public String getGrammarFileName() { return "RelationToSQL.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public ATN getATN() { return _ATN; }

	public RelationToSQLParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgContext extends ParserRuleContext {
		public ChooseContext choose(int i) {
			return getRuleContext(ChooseContext.class,i);
		}
		public List<TerminalNode> SEMI() { return getTokens(RelationToSQLParser.SEMI); }
		public TerminalNode SEMI(int i) {
			return getToken(RelationToSQLParser.SEMI, i);
		}
		public List<ProjectContext> project() {
			return getRuleContexts(ProjectContext.class);
		}
		public ProjectContext project(int i) {
			return getRuleContext(ProjectContext.class,i);
		}
		public List<ChooseContext> choose() {
			return getRuleContexts(ChooseContext.class);
		}
		public ProgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prog; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RelationToSQLListener ) ((RelationToSQLListener)listener).enterProg(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RelationToSQLListener ) ((RelationToSQLListener)listener).exitProg(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RelationToSQLVisitor ) return ((RelationToSQLVisitor<? extends T>)visitor).visitProg(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgContext prog() throws RecognitionException {
		ProgContext _localctx = new ProgContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_prog);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(48); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(44);
				switch (_input.LA(1)) {
				case XIGEMA:
					{
					setState(42); choose();
					}
					break;
				case PAI:
					{
					setState(43); project();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(46); match(SEMI);
				}
				}
				setState(50); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==PAI || _la==XIGEMA );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ProjectStartContext extends ParserRuleContext {
		public Token ident;
		public TerminalNode LEFT() { return getToken(RelationToSQLParser.LEFT, 0); }
		public ChooseSubContext chooseSub(int i) {
			return getRuleContext(ChooseSubContext.class,i);
		}
		public ProjectSubContext projectSub(int i) {
			return getRuleContext(ProjectSubContext.class,i);
		}
		public TerminalNode RIGHT() { return getToken(RelationToSQLParser.RIGHT, 0); }
		public TerminalNode IDENT() { return getToken(RelationToSQLParser.IDENT, 0); }
		public List<ChooseSubContext> chooseSub() {
			return getRuleContexts(ChooseSubContext.class);
		}
		public List<ProjectSubContext> projectSub() {
			return getRuleContexts(ProjectSubContext.class);
		}
		public ProjectStartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_projectStart; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RelationToSQLListener ) ((RelationToSQLListener)listener).enterProjectStart(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RelationToSQLListener ) ((RelationToSQLListener)listener).exitProjectStart(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RelationToSQLVisitor ) return ((RelationToSQLVisitor<? extends T>)visitor).visitProjectStart(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProjectStartContext projectStart() throws RecognitionException {
		ProjectStartContext _localctx = new ProjectStartContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_projectStart);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(52); match(LEFT);
			setState(57);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==PAI || _la==XIGEMA) {
				{
				setState(55);
				switch (_input.LA(1)) {
				case PAI:
					{
					setState(53); projectSub();
					}
					break;
				case XIGEMA:
					{
					setState(54); chooseSub();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(59);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(60); ((ProjectStartContext)_localctx).ident = match(IDENT);
			setState(61); match(RIGHT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ProjectContext extends ParserRuleContext {
		public ProjectStartContext t;
		public List<RelationContext> relation() {
			return getRuleContexts(RelationContext.class);
		}
		public LoopProjectColumnsContext loopProjectColumns(int i) {
			return getRuleContext(LoopProjectColumnsContext.class,i);
		}
		public ProjectColumnsContext projectColumns() {
			return getRuleContext(ProjectColumnsContext.class,0);
		}
		public RelationContext relation(int i) {
			return getRuleContext(RelationContext.class,i);
		}
		public List<ExprSubContext> exprSub() {
			return getRuleContexts(ExprSubContext.class);
		}
		public TerminalNode PAI() { return getToken(RelationToSQLParser.PAI, 0); }
		public ExprSubContext exprSub(int i) {
			return getRuleContext(ExprSubContext.class,i);
		}
		public ProjectStartContext projectStart() {
			return getRuleContext(ProjectStartContext.class,0);
		}
		public List<LoopProjectColumnsContext> loopProjectColumns() {
			return getRuleContexts(LoopProjectColumnsContext.class);
		}
		public ProjectContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_project; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RelationToSQLListener ) ((RelationToSQLListener)listener).enterProject(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RelationToSQLListener ) ((RelationToSQLListener)listener).exitProject(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RelationToSQLVisitor ) return ((RelationToSQLVisitor<? extends T>)visitor).visitProject(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProjectContext project() throws RecognitionException {
		ProjectContext _localctx = new ProjectContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_project);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(63); match(PAI);
			setState(64); projectColumns();
			setState(68);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==DOU) {
				{
				{
				setState(65); loopProjectColumns();
				}
				}
				setState(70);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(71); ((ProjectContext)_localctx).t = projectStart();
			setState(77);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << BING) | (1L << JIAO) | (1L << NJOIN) | (1L << CHU))) != 0)) {
				{
				{
				setState(72); relation();
				setState(73); exprSub();
				}
				}
				setState(79);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ChooseContext extends ParserRuleContext {
		public RelationContext t;
		public List<LoopChooseColumnsContext> loopChooseColumns() {
			return getRuleContexts(LoopChooseColumnsContext.class);
		}
		public NotEqualContext notEqual(int i) {
			return getRuleContext(NotEqualContext.class,i);
		}
		public List<BigContext> big() {
			return getRuleContexts(BigContext.class);
		}
		public RelationContext relation(int i) {
			return getRuleContext(RelationContext.class,i);
		}
		public TerminalNode XIGEMA() { return getToken(RelationToSQLParser.XIGEMA, 0); }
		public SmallContext small(int i) {
			return getRuleContext(SmallContext.class,i);
		}
		public BigContext big(int i) {
			return getRuleContext(BigContext.class,i);
		}
		public ExprSubContext exprSub(int i) {
			return getRuleContext(ExprSubContext.class,i);
		}
		public List<SmallContext> small() {
			return getRuleContexts(SmallContext.class);
		}
		public LoopChooseColumnsContext loopChooseColumns(int i) {
			return getRuleContext(LoopChooseColumnsContext.class,i);
		}
		public List<RelationContext> relation() {
			return getRuleContexts(RelationContext.class);
		}
		public List<EqualContext> equal() {
			return getRuleContexts(EqualContext.class);
		}
		public List<NotEqualContext> notEqual() {
			return getRuleContexts(NotEqualContext.class);
		}
		public List<ExprSubContext> exprSub() {
			return getRuleContexts(ExprSubContext.class);
		}
		public ChooseColumnsAfterAndOrContext chooseColumnsAfterAndOr(int i) {
			return getRuleContext(ChooseColumnsAfterAndOrContext.class,i);
		}
		public List<ChooseColumnsAfterAndOrContext> chooseColumnsAfterAndOr() {
			return getRuleContexts(ChooseColumnsAfterAndOrContext.class);
		}
		public ChooseColumnsContext chooseColumns() {
			return getRuleContext(ChooseColumnsContext.class,0);
		}
		public EqualContext equal(int i) {
			return getRuleContext(EqualContext.class,i);
		}
		public ChooseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_choose; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RelationToSQLListener ) ((RelationToSQLListener)listener).enterChoose(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RelationToSQLListener ) ((RelationToSQLListener)listener).exitChoose(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RelationToSQLVisitor ) return ((RelationToSQLVisitor<? extends T>)visitor).visitChoose(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ChooseContext choose() throws RecognitionException {
		ChooseContext _localctx = new ChooseContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_choose);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(80); match(XIGEMA);
			setState(81); chooseColumns();
			setState(86);
			switch (_input.LA(1)) {
			case EQUAL:
				{
				setState(82); equal();
				}
				break;
			case NEQUAL:
				{
				setState(83); notEqual();
				}
				break;
			case LESS:
				{
				setState(84); small();
				}
				break;
			case MORE:
				{
				setState(85); big();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(98);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==AND || _la==OR) {
				{
				{
				setState(88); loopChooseColumns();
				setState(89); chooseColumnsAfterAndOr();
				setState(94);
				switch (_input.LA(1)) {
				case EQUAL:
					{
					setState(90); equal();
					}
					break;
				case NEQUAL:
					{
					setState(91); notEqual();
					}
					break;
				case LESS:
					{
					setState(92); small();
					}
					break;
				case MORE:
					{
					setState(93); big();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				}
				setState(100);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(106);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << BING) | (1L << JIAO) | (1L << NJOIN) | (1L << CHU))) != 0)) {
				{
				{
				setState(101); ((ChooseContext)_localctx).t = relation();
				setState(102); exprSub();
				}
				}
				setState(108);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ProjectColumnsContext extends ParserRuleContext {
		public Token ident;
		public TerminalNode IDENT() { return getToken(RelationToSQLParser.IDENT, 0); }
		public ProjectColumnsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_projectColumns; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RelationToSQLListener ) ((RelationToSQLListener)listener).enterProjectColumns(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RelationToSQLListener ) ((RelationToSQLListener)listener).exitProjectColumns(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RelationToSQLVisitor ) return ((RelationToSQLVisitor<? extends T>)visitor).visitProjectColumns(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProjectColumnsContext projectColumns() throws RecognitionException {
		ProjectColumnsContext _localctx = new ProjectColumnsContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_projectColumns);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(109); ((ProjectColumnsContext)_localctx).ident = match(IDENT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ChooseColumnsContext extends ParserRuleContext {
		public Token ident;
		public TerminalNode IDENT() { return getToken(RelationToSQLParser.IDENT, 0); }
		public ChooseColumnsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_chooseColumns; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RelationToSQLListener ) ((RelationToSQLListener)listener).enterChooseColumns(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RelationToSQLListener ) ((RelationToSQLListener)listener).exitChooseColumns(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RelationToSQLVisitor ) return ((RelationToSQLVisitor<? extends T>)visitor).visitChooseColumns(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ChooseColumnsContext chooseColumns() throws RecognitionException {
		ChooseColumnsContext _localctx = new ChooseColumnsContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_chooseColumns);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(111); ((ChooseColumnsContext)_localctx).ident = match(IDENT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LoopProjectColumnsContext extends ParserRuleContext {
		public Token dou;
		public Token ident;
		public TerminalNode DOU() { return getToken(RelationToSQLParser.DOU, 0); }
		public TerminalNode IDENT() { return getToken(RelationToSQLParser.IDENT, 0); }
		public LoopProjectColumnsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_loopProjectColumns; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RelationToSQLListener ) ((RelationToSQLListener)listener).enterLoopProjectColumns(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RelationToSQLListener ) ((RelationToSQLListener)listener).exitLoopProjectColumns(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RelationToSQLVisitor ) return ((RelationToSQLVisitor<? extends T>)visitor).visitLoopProjectColumns(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LoopProjectColumnsContext loopProjectColumns() throws RecognitionException {
		LoopProjectColumnsContext _localctx = new LoopProjectColumnsContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_loopProjectColumns);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(113); ((LoopProjectColumnsContext)_localctx).dou = match(DOU);
			setState(114); ((LoopProjectColumnsContext)_localctx).ident = match(IDENT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RelationContext extends ParserRuleContext {
		public NjoContext njo() {
			return getRuleContext(NjoContext.class,0);
		}
		public JiaContext jia() {
			return getRuleContext(JiaContext.class,0);
		}
		public BinContext bin() {
			return getRuleContext(BinContext.class,0);
		}
		public ChuContext chu() {
			return getRuleContext(ChuContext.class,0);
		}
		public RelationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_relation; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RelationToSQLListener ) ((RelationToSQLListener)listener).enterRelation(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RelationToSQLListener ) ((RelationToSQLListener)listener).exitRelation(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RelationToSQLVisitor ) return ((RelationToSQLVisitor<? extends T>)visitor).visitRelation(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RelationContext relation() throws RecognitionException {
		RelationContext _localctx = new RelationContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_relation);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(120);
			switch (_input.LA(1)) {
			case BING:
				{
				setState(116); bin();
				}
				break;
			case JIAO:
				{
				setState(117); jia();
				}
				break;
			case NJOIN:
				{
				setState(118); njo();
				}
				break;
			case CHU:
				{
				setState(119); chu();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BinContext extends ParserRuleContext {
		public TerminalNode BING() { return getToken(RelationToSQLParser.BING, 0); }
		public BinContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_bin; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RelationToSQLListener ) ((RelationToSQLListener)listener).enterBin(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RelationToSQLListener ) ((RelationToSQLListener)listener).exitBin(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RelationToSQLVisitor ) return ((RelationToSQLVisitor<? extends T>)visitor).visitBin(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BinContext bin() throws RecognitionException {
		BinContext _localctx = new BinContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_bin);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(122); match(BING);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class JiaContext extends ParserRuleContext {
		public TerminalNode JIAO() { return getToken(RelationToSQLParser.JIAO, 0); }
		public JiaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_jia; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RelationToSQLListener ) ((RelationToSQLListener)listener).enterJia(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RelationToSQLListener ) ((RelationToSQLListener)listener).exitJia(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RelationToSQLVisitor ) return ((RelationToSQLVisitor<? extends T>)visitor).visitJia(this);
			else return visitor.visitChildren(this);
		}
	}

	public final JiaContext jia() throws RecognitionException {
		JiaContext _localctx = new JiaContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_jia);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(124); match(JIAO);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NjoContext extends ParserRuleContext {
		public TerminalNode NJOIN() { return getToken(RelationToSQLParser.NJOIN, 0); }
		public NjoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_njo; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RelationToSQLListener ) ((RelationToSQLListener)listener).enterNjo(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RelationToSQLListener ) ((RelationToSQLListener)listener).exitNjo(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RelationToSQLVisitor ) return ((RelationToSQLVisitor<? extends T>)visitor).visitNjo(this);
			else return visitor.visitChildren(this);
		}
	}

	public final NjoContext njo() throws RecognitionException {
		NjoContext _localctx = new NjoContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_njo);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(126); match(NJOIN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ChuContext extends ParserRuleContext {
		public TerminalNode CHU() { return getToken(RelationToSQLParser.CHU, 0); }
		public ChuContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_chu; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RelationToSQLListener ) ((RelationToSQLListener)listener).enterChu(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RelationToSQLListener ) ((RelationToSQLListener)listener).exitChu(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RelationToSQLVisitor ) return ((RelationToSQLVisitor<? extends T>)visitor).visitChu(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ChuContext chu() throws RecognitionException {
		ChuContext _localctx = new ChuContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_chu);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(128); match(CHU);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExprSubContext extends ParserRuleContext {
		public ChooseSubContext chooseSub() {
			return getRuleContext(ChooseSubContext.class,0);
		}
		public ProjectSubContext projectSub() {
			return getRuleContext(ProjectSubContext.class,0);
		}
		public ExprSubContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_exprSub; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RelationToSQLListener ) ((RelationToSQLListener)listener).enterExprSub(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RelationToSQLListener ) ((RelationToSQLListener)listener).exitExprSub(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RelationToSQLVisitor ) return ((RelationToSQLVisitor<? extends T>)visitor).visitExprSub(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ExprSubContext exprSub() throws RecognitionException {
		ExprSubContext _localctx = new ExprSubContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_exprSub);
		try {
			setState(132);
			switch (_input.LA(1)) {
			case XIGEMA:
				enterOuterAlt(_localctx, 1);
				{
				setState(130); chooseSub();
				}
				break;
			case PAI:
				enterOuterAlt(_localctx, 2);
				{
				setState(131); projectSub();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LoopChooseColumnsContext extends ParserRuleContext {
		public Token t;
		public TerminalNode AND() { return getToken(RelationToSQLParser.AND, 0); }
		public TerminalNode OR() { return getToken(RelationToSQLParser.OR, 0); }
		public LoopChooseColumnsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_loopChooseColumns; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RelationToSQLListener ) ((RelationToSQLListener)listener).enterLoopChooseColumns(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RelationToSQLListener ) ((RelationToSQLListener)listener).exitLoopChooseColumns(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RelationToSQLVisitor ) return ((RelationToSQLVisitor<? extends T>)visitor).visitLoopChooseColumns(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LoopChooseColumnsContext loopChooseColumns() throws RecognitionException {
		LoopChooseColumnsContext _localctx = new LoopChooseColumnsContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_loopChooseColumns);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(134);
			((LoopChooseColumnsContext)_localctx).t = _input.LT(1);
			_la = _input.LA(1);
			if ( !(_la==AND || _la==OR) ) {
				((LoopChooseColumnsContext)_localctx).t = (Token)_errHandler.recoverInline(this);
			}
			consume();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
